Added footer + ex 8 JS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <button onclick="changeTitle()">Click here for a better name</button>
     </header>
 
+    <button onclick="nightMode()">Click this button for night mode</button>
+
     <main>
 
         <section>
@@ -70,11 +72,10 @@
     </main>
 
     <footer>
-        <!-- name and address -->
+        1812 NE Alberta St, Portland, OR 97211, United States
     </footer> 
 
-    <div></div> Message board 
-   
+    <textarea placeholder="Leave me a message here!"></textarea>
     
     <script src="script.js"></script>
 </body>
