--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+Complete exercises from 1 to 6 with just plain HTML
+
+EX1.: Add an h1 tag with the name of your shop
+
+EX2.: Add a TABLE with the top 5 products of your shop
+
+EX3.: Insert for each product an image, a title, a description and a price
+
+EX4.: Add links to existing Amazon products for each item in the table
+
+EX5.: Add a footer with the address and the name of your shop
+
+EX6.: Add a message board where the user can type a message in it (no real posting/saving features required!)
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
